# bottlerocket

./: .dockerignore  .gitignore  .golangci.yaml  .mailmap  BUILDING.md  CHANGELOG.md  CHARTER.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Dockerfile  GLOSSARY.md  INSTALL.md  Makefile  Makefile.toml  PROVISIONING-METAL.md  PUBLISHING-AWS.md  PUBLISHING-VMWARE.md  PUBLISHING.md  QUICKSTART-ECS.md  QUICKSTART-EKS.md  QUICKSTART-LOCAL.md  QUICKSTART-VMWARE.md  QUICKSTART.md  README.md  RELEASE.toml  ROADMAP.md  Release.toml  SECURITY.md  SECURITY_FEATURES.md  SECURITY_GUIDANCE.md  START.md  SUPPORTED-HARDWARE.md  TESTING.md  TRADEMARKS.md  Twoliter.toml  default.nix  dependabot.yaml  sample-eksctl-ssh.yaml  sample-eksctl.yaml
extras/repo-canary/: Cargo.toml  Dockerfile  root.json
images/aws-k8s/: Cargo.toml  build.rs
sources/: Cargo.toml  README.md  clarify.toml  deny.toml
sources/api/: README.md  api-exec.drawio  api-exec.md  api-system.drawio  openapi.yaml  update_api.drawio
sources/ascwp/: Cargo.toml
sources/bloodhound/: Cargo.toml  README.md
sources/bottlerocket-release/: Cargo.toml  README.md  build.rs
sources/bottlerocket-variant/: Cargo.toml  README.md
sources/cfsignal/: Cargo.toml  README.md  build.rs
sources/constants/: Cargo.toml  README.md
sources/dogtag/: Cargo.toml  README.md  build.rs
sources/driverdog/: Cargo.toml  README.md
sources/ecs-gpu-init/: .gitignore  go.mod  go.sum
sources/generate-readme/: Cargo.toml
sources/ghostdog/: Cargo.toml  README.md
sources/growpart/: Cargo.toml  README.md
sources/hachiko/: Cargo.toml
sources/host-ctr/: .gitignore  go.mod  go.sum
sources/imdsclient/: Cargo.toml  README.md
sources/logdog/: .gitignore  Cargo.toml  README.md  build.rs
sources/metricdog/: Cargo.toml  README.md
sources/models/: Cargo.toml  README.md  build.rs  defaults.toml
sources/netdog/: Cargo.toml  README.md  README.tpl  build.rs
sources/parse-datetime/: Cargo.toml  README.md
sources/prairiedog/: Cargo.toml  README.md
sources/retry-read/: Cargo.toml  README.md
sources/settings-defaults/: build-defaults.rs  defaults-toml.rs
sources/shared-defaults/: aws-autoscaling.toml  aws-creds.toml  aws-host-containers.toml  boot.toml  defaults.toml  docker-daemon-nvidia.toml  docker-pki.toml  docker-services.toml  kubernetes-aws-external-cloud-provider.toml  kubernetes-aws.toml  kubernetes-metal.toml  kubernetes-seccomp-default-false.toml  kubernetes-services.toml  kubernetes-vmware.toml  lockdown-integrity.toml  lockdown-none.toml  nvidia-k8s-container-toolkit.toml  nvidia-k8s-device-plugin.toml  nvidia-oci-hooks-containerd-cri.toml  oci-defaults-containerd-cri-resource-limits.toml  oci-defaults-containerd-cri.toml  oci-defaults-docker.toml  public-host-containers.toml
sources/shimpei/: Cargo.toml  README.md
sources/static-pods/: Cargo.toml  README.md  README.tpl
sources/updater/: README.md  update-system.drawio
sources/webpki-roots-shim/: Cargo.toml
sources/whippet/: Cargo.toml  README.md
sources/xfscli/: Cargo.toml
tools/: .gitignore  Cargo.toml  deny.toml  diff-kernel-config  docker-go  gen-docs.sh  install-twoliter.sh  modify-image  partyplanner  rpm2img  rpm2kmodkit  rpm2migrations  start-local-vm
tools/bootconfig/: empty-bootconfig.data  qemu-x86-console-bootconfig.data
tools/bttr/: Cargo.toml
tools/buildsys/: Cargo.toml  deny.toml
tools/conformance-test/: README.md  clean-up-test-cluster.sh  run-conformance-test.sh  setup-test-cluster.sh
tools/infra/: .dockerignore  Dockerfile
tools/infrasys/: Cargo.toml
tools/pubsys/: Cargo.toml  Infra.toml.example
tools/pubsys-config/: Cargo.toml
tools/pubsys-setup/: Cargo.toml
tools/refresh-timestamp-lambda/: Cargo.toml  Makefile  README.md  TimestampRefreshLambda.yaml  timestamp-signer.yaml  tuf-repo-bucket-access-role.yaml
tools/testsys/: Cargo.toml  Test.toml.example
tools/testsys-config/: Cargo.toml
tools/update_sign_tuf_repo/: Cargo.toml  README.md
variants/: Cargo.toml  README.md  variants.rs
variants/aws-dev/: Cargo.toml
variants/aws-ecs-1/: Cargo.toml
variants/aws-ecs-1-nvidia/: Cargo.toml
variants/aws-ecs-1.1/: Cargo.toml
variants/aws-ecs-1.1-nvidia/: Cargo.toml
variants/aws-ecs-2/: Cargo.toml
variants/aws-ecs-2-nvidia/: Cargo.toml
variants/aws-k8s/: Cargo.toml
variants/aws-k8s-1.15/: Cargo.toml
variants/aws-k8s-1.16/: Cargo.toml
variants/aws-k8s-1.17/: Cargo.toml
variants/aws-k8s-1.18/: Cargo.toml
variants/aws-k8s-1.19/: Cargo.toml
variants/aws-k8s-1.20/: Cargo.toml
variants/aws-k8s-1.21/: Cargo.toml  build.rs
variants/aws-k8s-1.21-nvidia/: Cargo.toml
variants/aws-k8s-1.22/: Cargo.toml
variants/aws-k8s-1.22-nvidia/: Cargo.toml
variants/aws-k8s-1.23/: Cargo.toml
variants/aws-k8s-1.23-nvidia/: Cargo.toml
variants/aws-k8s-1.24/: Cargo.toml
variants/aws-k8s-1.24-nvidia/: Cargo.toml
variants/aws-k8s-1.25/: Cargo.toml
variants/aws-k8s-1.25-nvidia/: Cargo.toml
variants/aws-k8s-1.26/: Cargo.toml
variants/aws-k8s-1.26-nvidia/: Cargo.toml
variants/aws-k8s-1.27/: Cargo.toml
variants/aws-k8s-1.27-nvidia/: Cargo.toml
variants/aws-k8s-1.28/: Cargo.toml
variants/aws-k8s-1.28-nvidia/: Cargo.toml
variants/aws-k8s-1.29/: Cargo.toml
variants/aws-k8s-1.29-nvidia/: Cargo.toml
variants/aws-k8s-1.30/: Cargo.toml
variants/aws-k8s-1.30-nvidia/: Cargo.toml
variants/aws-k8s-1.31/: Cargo.toml
variants/aws-k8s-1.31-nvidia/: Cargo.toml
variants/metal-dev/: Cargo.toml
variants/metal-k8s-1.21/: Cargo.toml
variants/metal-k8s-1.22/: Cargo.toml
variants/metal-k8s-1.23/: Cargo.toml
variants/metal-k8s-1.24/: Cargo.toml
variants/metal-k8s-1.25/: Cargo.toml
variants/metal-k8s-1.26/: Cargo.toml
variants/metal-k8s-1.27/: Cargo.toml
variants/metal-k8s-1.28/: Cargo.toml
variants/metal-k8s-1.29/: Cargo.toml
variants/nutanix-dev/: Cargo.toml
variants/nutanix-k8s-1.21/: Cargo.toml
variants/nutanix-k8s-1.22/: Cargo.toml
variants/nutanix-k8s-1.23/: Cargo.toml
variants/nutanix-k8s-1.24/: Cargo.toml
workspaces/: Cargo.toml  README.md  clarify.toml  deny.toml
workspaces/api/: Makefile  (+5 more)
(+2363 files in other folders)
