[workspace]
resolver = "1"
members = [
    "packages/acpid",
    "packages/amazon-ssm-agent",
    "packages/aws-iam-authenticator",
    "packages/aws-signing-helper",
    "packages/bash",
    "packages/binutils",
    "packages/ca-certificates",
    "packages/chrony",
    "packages/cni",
    "packages/cni-plugins",
    "packages/conntrack-tools",
    "packages/containerd",
    "packages/coreutils",
    "packages/dbus-broker",
    "packages/docker-cli",
    "packages/docker-engine",
    "packages/docker-init",
    "packages/e2fsprogs",
    "packages/early-boot-config",
    "packages/ecr-credential-provider",
    "packages/ecr-credential-provider-1.27",
    "packages/ecr-credential-provider-1.29",
    "packages/ecr-credential-provider-1.30",
    "packages/ecs-agent",
    "packages/ecs-gpu-init",
    "packages/ethtool",
    "packages/filesystem",
    "packages/findutils",
    "packages/glibc",
    "packages/grep",
    "packages/grub",
    "packages/host-ctr",
    "packages/iproute",
    "packages/iptables",
    "packages/iputils",
    "packages/kernel-5.10",
    "packages/kernel-5.15",
    "packages/kernel-6.1",
    "packages/kexec-tools",
    "packages/keyutils",
    "packages/kmod",
    "packages/kmod-5.10-nvidia",
    "packages/kmod-5.15-nvidia",
    "packages/kmod-6.1-nvidia",
    "packages/kubernetes-1.23",
    "packages/kubernetes-1.24",
    "packages/kubernetes-1.25",
    "packages/kubernetes-1.26",
    "packages/kubernetes-1.27",
    "packages/kubernetes-1.28",
    "packages/kubernetes-1.29",
    "packages/kubernetes-1.30",
    "packages/libacl",
    "packages/libattr",
    "packages/libaudit",
    "packages/libcap",
    "packages/libdbus",
    "packages/libelf",
    "packages/libexpat",
    "packages/libffi",
    "packages/libgcc",
    "packages/libglib",
    "packages/libinih",
    "packages/libiw",
    "packages/libkcapi",
    "packages/libmnl",
    "packages/libncurses",
    "packages/libnetfilter_conntrack",
    "packages/libnetfilter_cthelper",
    "packages/libnetfilter_cttimeout",
    "packages/libnetfilter_queue",
    "packages/libnfnetlink",
    "packages/libnftnl",
    "packages/libnl",
    "packages/libnvidia-container",
    "packages/libpcre",
    "packages/libseccomp",
    "packages/libselinux",
    "packages/libsemanage",
    "packages/libsepol",
    "packages/libstd-rust",
    "packages/libtirpc",
    "packages/liburcu",
    "packages/libxcrypt",
    "packages/libz",
    "packages/libzstd",
    "packages/linux-firmware",
    "packages/login",
    "packages/makedumpfile",
    "packages/microcode",
    "packages/netdog",
    "packages/nvidia-container-toolkit",
    "packages/nvidia-k8s-device-plugin",
    "packages/oci-add-hooks",
    "packages/open-vm-tools",
    "packages/os",
    "packages/pigz",
    "packages/policycoreutils",
    "packages/procps",
    "packages/readline",
    "packages/release",
    "packages/runc",
    "packages/selinux-policy",
    "packages/settings-aws",
    "packages/settings-container-registry",
    "packages/settings-kernel",
    "packages/settings-motd",
    "packages/settings-ntp",
    "packages/settings-updates",
    "packages/shim",
    "packages/static-pods",
    "packages/strace",
    "packages/systemd",
    "packages/util-linux",
    "packages/wicked",
    "packages/xfsprogs",
    "variants/aws-dev",
    "variants/aws-ecs-1",
    "variants/aws-ecs-1-nvidia",
    "variants/aws-ecs-2",
    "variants/aws-ecs-2-nvidia",
    "variants/aws-k8s-1.23",
    "variants/aws-k8s-1.23-nvidia",
    "variants/aws-k8s-1.24",
    "variants/aws-k8s-1.24-nvidia",
    "variants/aws-k8s-1.25",
    "variants/aws-k8s-1.25-nvidia",
    "variants/aws-k8s-1.26",
    "variants/aws-k8s-1.26-nvidia",
    "variants/aws-k8s-1.27",
    "variants/aws-k8s-1.27-nvidia",
    "variants/aws-k8s-1.28",
    "variants/aws-k8s-1.28-nvidia",
    "variants/aws-k8s-1.29",
    "variants/aws-k8s-1.29-nvidia",
    "variants/aws-k8s-1.30",
    "variants/aws-k8s-1.30-nvidia",
    "variants/metal-dev",
    "variants/metal-k8s-1.26",
    "variants/metal-k8s-1.27",
    "variants/metal-k8s-1.28",
    "variants/metal-k8s-1.29",
    "variants/vmware-dev",
    "variants/vmware-k8s-1.26",
    "variants/vmware-k8s-1.27",
    "variants/vmware-k8s-1.28",
    "variants/vmware-k8s-1.29",
    "variants/vmware-k8s-1.30",
]

[profile.dev]
debug = false
opt-level = 'z'

[profile.dev.build-override]
opt-level = 'z'
