[workspace]
resolver = "1"
members = [
    "packages/settings-defaults",
    "packages/settings-plugins",

    "variants/aws-dev",
    "variants/aws-ecs-1",
    "variants/aws-ecs-2",
    "variants/aws-ecs-1-nvidia",
    "variants/aws-ecs-2-nvidia",
    "variants/aws-k8s-1.23",
    "variants/aws-k8s-1.23-nvidia",
    "variants/aws-k8s-1.24",
    "variants/aws-k8s-1.24-nvidia",
    "variants/aws-k8s-1.25",
    "variants/aws-k8s-1.25-nvidia",
    "variants/aws-k8s-1.26",
    "variants/aws-k8s-1.26-nvidia",
    "variants/aws-k8s-1.27",
    "variants/aws-k8s-1.28",
    "variants/aws-k8s-1.29",
    "variants/aws-k8s-1.30",
    "variants/aws-k8s-1.27-nvidia",
    "variants/aws-k8s-1.28-nvidia",
    "variants/aws-k8s-1.29-nvidia",
    "variants/aws-k8s-1.30-nvidia",
    "variants/metal-dev",
    "variants/metal-k8s-1.28",
    "variants/metal-k8s-1.29",
    "variants/vmware-dev",
    "variants/vmware-k8s-1.28",
    "variants/vmware-k8s-1.29",
    "variants/vmware-k8s-1.30",
]

[profile.dev]
debug = false
opt-level = 'z'

[profile.dev.build-override]
opt-level = 'z'
