[workspace]
resolver = "1"
members = [
    "api/datastore",
    "api/apiclient",
    "api/migration/migration-helpers",

    "api/schnauzer",

    "bottlerocket-release",
    "constants",

    "generate-readme",

    "models",

    "retry-read",

    "settings-defaults/aws-dev",
    "settings-defaults/aws-ecs-1",
    "settings-defaults/aws-ecs-1-nvidia",
    "settings-defaults/aws-ecs-2",
    "settings-defaults/aws-ecs-2-nvidia",
    "settings-defaults/aws-k8s-1.24",
    "settings-defaults/aws-k8s-1.24-nvidia",
    "settings-defaults/aws-k8s-1.25",
    "settings-defaults/aws-k8s-1.25-nvidia",
    "settings-defaults/aws-k8s-1.26",
    "settings-defaults/aws-k8s-1.26-nvidia",
    "settings-defaults/aws-k8s-1.30",
    "settings-defaults/aws-k8s-1.30-nvidia",
    "settings-defaults/metal-dev",
    "settings-defaults/metal-k8s-1.30",
    "settings-defaults/vmware-dev",
    "settings-defaults/vmware-k8s-1.30",

    # (all previous migrations archived; add new ones after this line)
    "settings-migrations/v1.21.0/pluto-remove-generators-v0-1-0",
    "settings-migrations/v1.21.0/pod-infra-container-image-affected-services",
    "settings-migrations/v1.21.0/pod-infra-container-image-remove-settings-generator",
    "settings-migrations/v1.21.0/pod-infra-container-image-services",
    "settings-migrations/v1.21.0/k8s-reserved-cpus-v0-1-0",

    "settings-plugins/aws-dev",
    "settings-plugins/aws-ecs-1",
    "settings-plugins/aws-ecs-2",
    "settings-plugins/aws-k8s",
    "settings-plugins/metal-dev",
    "settings-plugins/metal-k8s",
    "settings-plugins/vmware-dev",
    "settings-plugins/vmware-k8s",

    "constants",
]

[workspace.dependencies.bottlerocket-defaults-helper]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-defaults-helper-v0.1.0"
version = "0.1.0"

[workspace.dependencies.bottlerocket-modeled-types]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.1.0"
version = "0.1.0"

[workspace.dependencies.bottlerocket-settings-models]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.1.0"
version = "0.1.0"

[workspace.dependencies.bottlerocket-settings-plugin]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-plugin-v0.1.0"
version = "0.1.0"

[workspace.dependencies.settings-extension-oci-defaults]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.1.0"
version = "0.1.0"

[profile.release]
debug = true
