[workspace]
resolver = "1"
members = [
    "api/datastore",
    "api/apiclient",
    "api/migration/migration-helpers",

    "api/schnauzer",

    "bottlerocket-release",
    "constants",

    "generate-readme",

    "models",

    "retry-read",

    "settings-defaults/aws-dev",
    "settings-defaults/aws-ecs-1",
    "settings-defaults/aws-ecs-1-nvidia",
    "settings-defaults/aws-ecs-2",
    "settings-defaults/aws-ecs-2-nvidia",
    "settings-defaults/aws-k8s-1.24",
    "settings-defaults/aws-k8s-1.24-nvidia",
    "settings-defaults/aws-k8s-1.25",
    "settings-defaults/aws-k8s-1.25-nvidia",
    "settings-defaults/aws-k8s-1.26",
    "settings-defaults/aws-k8s-1.26-nvidia",
    "settings-defaults/aws-k8s-1.31",
    "settings-defaults/aws-k8s-1.31-nvidia",
    "settings-defaults/metal-dev",
    "settings-defaults/metal-k8s-1.30",
    "settings-defaults/vmware-dev",
    "settings-defaults/vmware-k8s-1.31",

    # (all previous migrations archived; add new ones after this line)
    "settings-migrations/v1.21.0/pluto-remove-generators-v0-1-0",
    "settings-migrations/v1.21.0/pod-infra-container-image-affected-services",
    "settings-migrations/v1.21.0/pod-infra-container-image-remove-settings-generator",
    "settings-migrations/v1.21.0/pod-infra-container-image-services",
    "settings-migrations/v1.21.0/k8s-reserved-cpus-v0-1-0",
    "settings-migrations/v1.21.0/add-hostname-override-source",
    "settings-migrations/v1.21.1/aws-admin-container-v0-11-10",
    "settings-migrations/v1.21.1/public-admin-container-v0-11-10",
    "settings-migrations/v1.21.1/aws-control-container-v0-7-14",
    "settings-migrations/v1.21.1/public-control-container-v0-7-14",
    "settings-migrations/v1.22.0/aws-admin-container-v0-11-11",
    "settings-migrations/v1.22.0/public-admin-container-v0-11-11",
    "settings-migrations/v1.22.0/aws-control-container-v0-7-15",
    "settings-migrations/v1.22.0/public-control-container-v0-7-15",
    "settings-migrations/v1.22.0/bootstrap-commands-settings",
    "settings-migrations/v1.22.0/bootstrap-commands-metadata",
    "settings-migrations/v1.23.0/nvidia-container-runtime-metadata",
    "settings-migrations/v1.23.0/nvidia-container-runtime-settings",
    "settings-migrations/v1.23.0/kubelet-device-plugins-metadata",
    "settings-migrations/v1.23.0/kubelet-device-plugins-settings",

    "settings-plugins/aws-dev",
    "settings-plugins/aws-ecs-1",
    "settings-plugins/aws-ecs-2",
    "settings-plugins/aws-k8s",
    "settings-plugins/aws-k8s-nvidia",
    "settings-plugins/metal-dev",
    "settings-plugins/metal-k8s",
    "settings-plugins/vmware-dev",
    "settings-plugins/vmware-k8s",

    "constants",
]

[workspace.dependencies]
apiclient = { version = "0.1", path = "api/apiclient" }
bottlerocket-release = { version = "0.1", path = "bottlerocket-release" }
constants = { version = "0.1", path = "constants" }
datastore = { version = "0.1", path = "api/datastore" }
generate-readme = { version = "0.1", path = "generate-readme" }
migration-helpers = { version = "0.1.0", path = "api/migration/migration-helpers" }
models = { version = "0.1", path = "models" }
retry-read = { version = "0.1", path = "retry-read" }
schnauzer = { version = "0.1", path = "api/schnauzer" }

abi_stable = "0.11.3"
argh = "0.1"
async-trait = "0.1"
base64 = "0.21"
cached = "0.49"
cargo-readme = "3"
dns-lookup = "2"
envy = "0.4"
futures = { version = "0.3", default-features = false }
futures-channel = { version = "0.3", default-features = false }
handlebars = "4"
http = "0.2"
httparse = "1"
hyper = { version = "0.14", default-features = false }
hyper-unix-connector = "0.2"
lazy_static = "1"
libc = "0.2"
log = "0.4"
maplit = "1.0"
nix = "0.26"
num_cpus = "1"
percent-encoding = "2"
pest = "2.5"
pest_derive = "2.5"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", default-features = false }
semver = "1"
serde = "1"
serde_json = "1"
serde_plain = "1"
shlex = "1"
signal-hook = "0.3"
simplelog = "0.12"
snafu = "0.8"
tokio = { version = "~1.32", default-features = false }
tokio-tungstenite = { version = "0.20", default-features = false }
toml = "0.8"
unindent = "0.1"
url = "2"
walkdir = "2"

[workspace.dependencies.bottlerocket-defaults-helper]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-defaults-helper-v0.1.0"
version = "0.1.0"

[workspace.dependencies.bottlerocket-modeled-types]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.4.0"
version = "0.4.0"

[workspace.dependencies.bottlerocket-settings-models]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.4.0"
version = "0.4.0"

[workspace.dependencies.bottlerocket-settings-plugin]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-plugin-v0.1.0"
version = "0.1.0"

[workspace.dependencies.settings-extension-oci-defaults]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.4.0"
version = "0.1.0"

[profile.release]
debug = true
