[workspace]
resolver = "1"
members = [
    "aws-dev",
    "aws-ecs-1",
    "aws-ecs-2",
    "aws-ecs-1-nvidia",
    "aws-ecs-2-nvidia",
    "aws-k8s-1.23",
    "aws-k8s-1.23-nvidia",
    "aws-k8s-1.24",
    "aws-k8s-1.24-nvidia",
    "aws-k8s-1.25",
    "aws-k8s-1.25-nvidia",
    "aws-k8s-1.26",
    "aws-k8s-1.26-nvidia",
    "aws-k8s-1.27",
    "aws-k8s-1.28",
    "aws-k8s-1.27-nvidia",
    "aws-k8s-1.28-nvidia",
    "metal-dev",
    "metal-k8s-1.23",
    "metal-k8s-1.24",
    "metal-k8s-1.25",
    "metal-k8s-1.26",
    "metal-k8s-1.27",
    "metal-k8s-1.28",
    "vmware-dev",
    "vmware-k8s-1.23",
    "vmware-k8s-1.24",
    "vmware-k8s-1.25",
    "vmware-k8s-1.26",
    "vmware-k8s-1.27",
    "vmware-k8s-1.28",
]

[profile.dev]
debug = false
opt-level = 'z'

[profile.dev.build-override]
opt-level = 'z'
