[workspace]
members = [
    "api/apiserver",
    "api/apiclient",
    "api/bork",
    "api/data_store_version",
    "api/moondog",
    "api/netdog",
    "api/sundog",
    "api/pluto",
    "api/servicedog",
    "api/storewolf",
    "api/thar-be-settings",
    "api/settings-committer",
    "api/migration/migrator",
    "api/migration/migration-helpers",

    # Migrations will be listed here.  They won't need to be listed as a
    # workspace member when we add cross-workspace dependencies.
    "api/migration/migrations/v1.1/testmigration",

    "preinit/laika",

    "updater/olpc-cjson",
    "updater/block-party",
    "updater/signpost",
    "updater/tough",
    "updater/tough_schema",
    "updater/updog",

    "tuftool",

    "webpki-roots-shim",

    "growpart",
]

[profile.release]
debug = true
lto = true

# This replaces webpki-roots with a shim that reads from the ca-certificates package
[patch.crates-io.webpki-roots]
path = "webpki-roots-shim"

# FIXME drop this when next rusoto releases with
# https://github.com/rusoto/rusoto/pull/1494
[patch.crates-io.rusoto_core]
git = "https://github.com/rusoto/rusoto.git"
rev = "260169aabe14b4596e648c551a6246968f4a179a"
[patch.crates-io.rusoto_credential]
git = "https://github.com/rusoto/rusoto.git"
rev = "260169aabe14b4596e648c551a6246968f4a179a"
[patch.crates-io.rusoto_ssm]
git = "https://github.com/rusoto/rusoto.git"
rev = "260169aabe14b4596e648c551a6246968f4a179a"
