[workspace]
members = [
    "api/apiserver",
    "api/apiclient",
    "api/bork",
    "api/data_store_version",
    "api/moondog",
    "api/netdog",
    "api/sundog",
    "api/pluto",
    "api/servicedog",
    "api/host-containers",
    "api/storewolf",
    "api/thar-be-settings",
    "api/settings-committer",
    "api/migration/migrator",
    "api/migration/migration-helpers",

    # Migrations will be listed here.  They won't need to be listed as a
    # workspace member when we add cross-workspace dependencies.
    "api/migration/migrations/v0.1/borkseed",

    "preinit/laika",

    "updater/olpc-cjson",
    "updater/block-party",
    "updater/signpost",
    "updater/tough",
    "updater/tough_schema",
    "updater/updog",

    "tuftool",

    "webpki-roots-shim",

    "growpart",
]

[profile.release]
debug = true
lto = true

# This replaces webpki-roots with a shim that reads from the ca-certificates package
[patch.crates-io.webpki-roots]
path = "webpki-roots-shim"
