[workspace]
members = [
    "api/apiserver",
    "api/apiclient",
    "api/bork",
    "api/data_store_version",
    "api/moondog",
    "api/netdog",
    "api/sundog",
    "api/schnauzer",
    "api/pluto",
    "api/servicedog",
    "api/host-containers",
    "api/storewolf",
    "api/thar-be-settings",
    "api/settings-committer",
    "api/migration/migrator",
    "api/migration/migration-helpers",

    # Migrations will be listed here.  They won't need to be listed as a
    # workspace member when we add cross-workspace dependencies.
    "api/migration/migrations/v0.1/migrate-borkseed",
    "api/migration/migrations/v0.1/migrate-host-containers-version",
    "api/migration/migrations/v0.2/migrate-containerd-config-path",
    "api/migration/migrations/v0.2/migrate-remove-region",
    "api/migration/migrations/v0.2/migrate-host-containers-v03",

    "models",

    "preinit/laika",

    "updater/block-party",
    "updater/signpost",
    "updater/update_metadata",
    "updater/updog",

    "webpki-roots-shim",

    "growpart",
]

[profile.release]
debug = true

# This replaces webpki-roots with a shim that reads from the ca-certificates package
[patch.crates-io.webpki-roots]
path = "webpki-roots-shim"
