[package]
name = "repo-canary"
version = "0.1.0"
authors = ["Erikson Tung <etung@amazon.com>"]
edition = "2018"
publish = false

[dependencies]
log = "0.4"
rand = "0.7.0"
reqwest = { version = "0.9.17", default-features = false, features = ["rustls-tls"] }
simplelog = "0.7"
snafu = "0.5.0"
tough = { version = "0.1.0", features = ["http"] }
