[package]
name = "bloodhound"
version = "0.1.0"
authors = ["Sean McGinnis <stmcg@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
argh = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
