[package]
name = "bottlerocket-release"
version = "0.1.0"
authors = ["Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
envy = "0.4"
log = "0.4"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
snafu = "0.7"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
