[package]
name = "bottlerocket-variant"
version = "0.1.0"
authors = ["Matt Briggs <brigmatt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
serde = "1"
snafu = "0.7"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
