[package]
name = "cfsignal"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"
snafu = { version = "0.8" }
toml = "0.8"
tokio = { version = "~1.32", default-features = false, features = ["macros", "rt-multi-thread"] }
aws-config = "1"
aws-sdk-cloudformation = "1"
aws-types = "1"
imdsclient = { path = "../imdsclient", version = "0.1" }

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
