[package]
name = "constants"
version = "0.1.0"
authors = ["Arnaldo Garcia Rincon <agarrcia@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]

[build-dependencies]
buildsys = { path = "../../tools/buildsys", version = "0.1.0" }
