[package]
name = "driverdog"
version = "0.1.0"
authors = ["Arnaldo Garcia Rincon <agarrcia@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
argh = "0.1.3"
log = "0.4"
simplelog = "0.11"
snafu = "0.7"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2.0"
toml = "0.5.9"

[build-dependencies]
cargo-readme = "3.1"
