[package]
name = "ghostdog"
version = "0.1.0"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
argh = "0.1.3"
gptman = { version = "0.8.2", default-features = false }
hex-literal = "0.3.0"
lazy_static = "1.2"
signpost = { path = "../updater/signpost", version = "0.1.0" }
snafu = "0.7"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
