[package]
name = "ghostdog"
version = "0.1.0"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
argh = "0.1"
gptman = { version = "1", default-features = false }
hex-literal = "0.3"
lazy_static = "1"
signpost = { path = "../updater/signpost", version = "0.1" }
snafu = "0.7"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
