[package]
name = "growpart"
version = "0.1.0"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
gptman = { version = "0.8.2", default-features = false }
snafu = "0.6"
libc = "0.2"
block-party = { path = "../updater/block-party", version = "0.1.0" }
inotify = "0.9"

[build-dependencies]
cargo-readme = "3.1"
