[package]
name = "imdsclient"
version = "0.1.0"
authors = ["Patrick J.P. Culp <jpculp@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
http = "0.2"
log = "0.4"
reqwest = { version = "0.11.1", default-features = false }
serde_json = "1"
snafu = "0.7"
tokio = { version = "~1.17", default-features = false, features = ["macros", "rt-multi-thread", "time"] }  # LTS
tokio-retry = "0.3"
url = "2.1.1"

[build-dependencies]
cargo-readme = "3.1"

[dev-dependencies]
httptest = "0.15"
tokio-test = "0.4.1"
