[package]
name = "logdog"
version = "0.1.0"
authors = ["Matt Briggs <brigmatt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
apiclient = { path = "../api/apiclient", version = "0.1.0" }
constants = { path = "../constants", version = "0.1.0" }
datastore = { path = "../api/datastore", version = "0.1.0" }
flate2 = "1.0"
glob = "0.3"
models = { path = "../models", version = "0.1.0" }
reqwest = { version = "0.11.1", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1"
shell-words = "1.0.0"
snafu = { version = "0.7", features = ["backtraces-impl-backtrace-crate"] }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.1.0", default-features = false }
tokio = { version = "~1.17", default-features = false, features = ["macros", "rt-multi-thread"] }  # LTS
url = "2.1.1"
walkdir = "2.3"

[build-dependencies]
cargo-readme = "3.1"
