[package]
name = "logdog"
version = "0.1.0"
authors = ["Matt Briggs <brigmatt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
flate2 = "1"
glob = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
serde_json = "1"
shell-words = "1"
snafu = { version = "0.8", features = ["backtraces-impl-backtrace-crate"] }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3", default-features = false }
tokio = { version = "~1.32", default-features = false, features = ["macros", "rt-multi-thread"] }  # LTS
url = "2"
walkdir = "2"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }
