[package]
name = "metricdog"
version = "0.1.0"
authors = ["Matt Briggs <brigmatt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
bottlerocket-release = { path = "../bottlerocket-release", version = "0.1.0" }
log = "0.4"
reqwest = { version = "0.11.1", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.100", features = ["derive"] }
simplelog = "0.11"
snafu = { version = "0.7" }
structopt = "0.3.17"
toml = "0.5.9"
url = "2.1.1"

[build-dependencies]
cargo-readme = "3.1"

[dev-dependencies]
httptest = "0.15"
tempfile = { version = "3.1.0", default-features = false }
