[package]
name = "metricdog"
version = "0.1.0"
authors = ["Matt Briggs <brigmatt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
argh = "0.1"
bottlerocket-release = { path = "../bottlerocket-release", version = "0.1" }
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
snafu = { version = "0.7" }
toml = "0.5"
url = "2"

[build-dependencies]
generate-readme = { version = "0.1", path = "../generate-readme" }

[dev-dependencies]
httptest = "0.15"
tempfile = { version = "3", default-features = false }
